# pit_experiments

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/callbacks/: early_stopping.yaml  grokking.yaml  lr_monitor.yaml
configs/data/: mnist.yaml  toy_constant.yaml  toy_count.yaml  toy_edge_classification.yaml  toy_identity.yaml  toy_mirror.yaml  toy_mirror_4x4.yaml  toy_move_object.yaml  toy_move_object_classification.yaml
configs/experiment/: mnist-vit-t.yaml  toy_count-pit_grid_serghei.yaml  toy_edge_detection_4x4-mlp_classification.yaml  toy_edge_detection_4x4-pit_grid_serghei_simple_classification.yaml  toy_mirror-pit_grid_small.yaml  toy_mirror-pit_serghei_grid_small.yaml  toy_mirror_4x4-mlp_small.yaml  toy_mirror_4x4-mlp_small_overfit.yaml  toy_mirror_4x4-pit_grid_serghei_small.yaml  toy_mirror_4x4-pit_grid_serghei_small_hp_search.yaml  toy_mirror_4x4-pit_grid_serghei_small_overfit.yaml  toy_mirror_4x4-pit_grid_small.yaml  toy_mirror_8x8-pit_grid_serghei_enc_dec.yaml  toy_move_object_8x8-mlp_beefy.yaml  toy_move_object_8x8-mlp_beefy_classification.yaml  toy_move_object_8x8-pit_grid_serghei.yaml  toy_move_object_8x8-pit_grid_serghei_classification.yaml  toy_move_object_8x8-pit_grid_serghei_dec.yaml  toy_move_object_8x8-pit_grid_serghei_enc_dec.yaml  toy_move_object_8x8-pit_grid_serghei_transformer.yaml
configs/model/: deprecated_pit_t_cls.yaml  mlp.yaml  vit-t.yaml  (+7 more)
notebooks/: colab.ipynb  diego_playground.ipynb  toy_dataset_test.ipynb  toy_dataset_test2.ipynb  toy_vit_test.ipynb  toy_vit_test_classification.ipynb  toy_vit_test_diego_copy.ipynb
(+24 files in other folders)
