[tool.poetry]
name = "pit"
version = "0.1.0"
description = ""
packages = [
    { include = "src", from = "." }
]
authors = ["Diego Canez <canezdiego@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0"
numpy = "<2.0.0"
matplotlib = "^3.9.0"
transformers = "^4.41.2"
datasets = "^2.20.0"
torchvision = ">=0.15.0"
lightning = ">=2.0.0"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.17.0"
torchmetrics = ">=0.11.4"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
rootutils = "^1.0.7"
pre-commit = "^3.7.1"
rich = "^13.7.1"
pytest = "^8.2.2"
wandb = "^0.17.2"
vit-prisma = "^0.1.4"
auto-circuit = "^0.1.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^24.4.2"
torch-tb-profiler = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
